crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_html_block_comment_trailing_softbreak_blockquote_commonmark.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..30
  BLOCK_QUOTE@0..30
    BLOCK_QUOTE_MARKER@0..1 ">"
    WHITESPACE@1..2 " "
    HTML_BLOCK@2..23
      HTML_BLOCK_TAG@2..23
        TEXT@2..22 "<!-- hi --> trailing"
        NEWLINE@22..23 "\n"
    BLOCK_QUOTE_MARKER@23..24 ">"
    WHITESPACE@24..25 " "
    PARAGRAPH@25..30
      TEXT@25..29 "more"
      NEWLINE@29..30 "\n"
