crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_html_block_comment_trailing_softbreak_commonmark.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
assertion_line: 99
expression: cst_output
---
DOCUMENT@0..26
  HTML_BLOCK@0..21
    HTML_BLOCK_TAG@0..21
      TEXT@0..20 "<!-- hi --> trailing"
      NEWLINE@20..21 "\n"
  PARAGRAPH@21..26
    TEXT@21..25 "more"
    NEWLINE@25..26 "\n"
